# Shear-private

./: .gitignore  AGENTS.md  README.md  pyproject.toml
GenMonads/: README.md  __init__.py  cli_common.py  conversation.md  early_return.py  header_mapping.py  header_translator.py  parser_symbols.py  predicate_mapping.py  refinement_proof_tutorial.md  translate_c_file.py
GenMonads/absprog/: __init__.py  assemble.py  block_renderer.py  check_rocq.py  cli.py  context.py  context_cli.py  examples.py  gen_func_residual.py  gen_rel_lib.py  loop_forest.py  parse_coq.py  partition.py  partition_cli.py  residual_cli.py  synth_cli.py  synthesize.py  templates.py  workdir.py
GenMonads/addabstract/: README.md  __init__.py  addexec.py
GenMonads/data/: coq_resource_mappings.json  data_fields.json  guard_predicates.json  header_mappings.json  (+4 more)
TODO/: abstract_program_assert_skill_plan.md  agents_concurrency_proof_resuse.md  block_partition_refactor_plan.md  cli_alias_unification_plan.md  early_point.md  functioncall_absprog.md  loop_invariant_mismatch.md  proof_reuse_across_refinement.md  qcp_annotations_dev.md  refinement_concurrency_plan.md  refinement_skill_issues.md  refinement_skill_permission.md  refinement_vc_no_cheat_plan.md  staterr_monad_option.md  streamA_plan.md  streamB_plan.md  synthesis_issues.md
document/: functional_correctness_skill_plan.md
myhelloagent/: main.py  pyproject.toml
scripts/: check_rocq.sh  clean_rel.sh  clean_rocq.sh  clean_symexec.sh  extract_and_normalize_assertions.py  loopinv_c.sh  symexec.sh
shape_invdataset/: ALGORITHMS.md
(+325 files in other folders)
