[project]
name = "llm4pv"
version = "0.1.0"
description = "LLM-assisted program verification: translating C programs with shape assertions to data predicates"
requires-python = ">=3.9"

[project.scripts]
llm4pv = "GenMonads.translate_c_file:main"
llm4pv-guard = "GenMonads.guardgen.cli:main"
llm4pv-rellib = "GenMonads.absprog.cli:main"
llm4pv-context = "GenMonads.absprog.context_cli:main"
llm4pv-synth = "GenMonads.absprog.synth_cli:main"
llm4pv-residual = "GenMonads.absprog.residual_cli:main"
llm4pv-partition = "GenMonads.absprog.partition_cli:main"
llm4pv-assertgen = "GenMonads.assertgen.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["GenMonads/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["GenMonads"]

[tool.uv.workspace]
members = [
    "myhelloagent",
]
